# datagram-transport-local

./: .gitignore  README.md  deps.toml
.github/workflows/: build_linux.yml  build_macos.yml
src/: CMakeLists.txt
src/include/datagram-transport-local/: local.h
src/lib/: CMakeLists.txt  local.c
src/test/: CMakeLists.txt  main.c  test.c
