cmake_minimum_required(VERSION 3.16.3)
project(datagram_transport_local C)
add_subdirectory("deps/piot/clog/src/lib")
add_subdirectory("deps/piot/tiny-libc/src/lib")
add_subdirectory("deps/piot/discoid-c/src/lib")
add_subdirectory("deps/piot/datagram-transport-c/src/lib")
add_subdirectory("lib")
#add_subdirectory("test")
